--- a/App/Learnova/Learnova.csproj
+++ b/App/Learnova/Learnova.csproj
@@ -57,4 +57,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\Resources\Learnova.jpg" />
+    </ItemGroup>
+
 </Project>
