--- a/App/Learnova/Learnova.csproj
+++ b/App/Learnova/Learnova.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Heron.MudCalendar" Version="3.1.0" />
       <PackageReference Include="MudBlazor" Version="8.5.1" />
     </ItemGroup>
 
