--- a/App/Learnova/Learnova.csproj
+++ b/App/Learnova/Learnova.csproj
@@ -8,7 +8,13 @@
 
     <ItemGroup>
       <PackageReference Include="Heron.MudCalendar" Version="3.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="MudBlazor" Version="8.5.1" />
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.3" />
     </ItemGroup>
 
     <ItemGroup>
